update index and about copy

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -4,13 +4,17 @@ en:
   blocks: 
     - title: What we do
       text: | 
-        Theeta consists of subsidiaries working in various sectors of import, export and production.
-
-        Currently, Theeta manufactures electric and electronic appliances, distributes Italian wine and unique high-tech chemical disinfection solutions, along with providing organizations with much-needed personal protective equipment. 
+        Theeta is active in the sectors of production, import and export.
+        
+        It manufactures its own range of electrical appliances, imports and distributes electronic devices and supplies the market with high-quality Italian wine. 
+        
+        At the same time, it has developed a successful business in the supply of personal protective equipment to large organisations. 
+        
+        Lastly, it provides high-tech chemical disinfection solutions, cooperating with the world's leading and innovative company in its field, SANOSIL AG.
     - title: Work with us
       text: | 
-        We invite you to explore this webpage to find out more about the brand we produce and the ones we distribute. 
-
+        We invite you to explore this website to learn more about the brands we produce and distribute.
+        
         **We specialize in distribution and are open to new partnerships.**
 
         Our business model is building long-lasting, mutually beneficial relationships with trusted suppliers and distribution partners.
@@ -18,10 +22,7 @@ en:
       text: | 
         Email us at **info@theeta.nl** for more information and collaboration opportunities.
 
-        Our employees have more than 15 years of experience in market research, operations and everything that comes with running successful manufacturing and distribution businesses.
-
-        **We'd love to talk.**
-
+        Our partners have more than 15 years of experience in market research and successful operation of manufacturing and distribution businesses.
   company-info: | 
     ## Company Information
 
@@ -50,23 +51,25 @@ el:
   blocks: 
     - title: Τι κάνουμε
       text: | 
-        Η Theeta αποτελείται από παραρτήματα που δραστηριοποιούνται σε διάφορους τομείς εισαγωγών, εξαγωγών και παραγωγής.
-
-        Επί του παρόντος, η Theeta κατασκευάζει ηλεκτρικές και ηλεκτρονικές συσκευές, διανέμει ιταλικό κρασί και μοναδικές λύσεις χημικής απολύμανσης υψηλής τεχνολογίας, καθώς και παρέχει σε οργανισμούς απαραίτητα μέσα ατομικής προστασίας. 
-    - title: Συνεργαστήτε μαζί μας
+        Η Theeta δραστηριοποιείται στους τομείς παραγωγής, εισαγωγών και εξαγωγών. 
+        
+        Κατασκευάζει την δική της σειρά ηλεκτρικών συσκευών, εισάγει και διακινεί ηλεκτρονικές συσκευές, εφοδιάζει την αγορά με υψηλής ποιότητας ιταλικό κρασί. 
+        
+        Ταυτόχρονα, έχει αναπτύξει επιτυχημένη δραστηριότητα στην παροχή μέσων ατομικής προστασίας σε μεγάλους οργανισμούς. 
+        
+        Τέλος, εξασφαλίζει λύσεις χημικής απολύμανσης υψηλής τεχνολογίας, συνεργαζόμενη με την κορυφαία παγκοσμίως και καινοτόμα στον τομέα της, SANOSIL AG.
+    - title: Συνεργαστείτε μαζί μας
       text: | 
-        Σας προσκαλούμε να εξερευνήσετε αυτή την ιστοσελίδα για να μάθετε περισσότερα για το εμπορικό σήμα που παράγουμε και αυτά που διανέμουμε. 
+        Σας προσκαλούμε να εξερευνήσετε αυτή την ιστοσελίδα για να μάθετε περισσότερα για τa brands παραγωγής και διανομής μας.
 
         **Ειδικευόμαστε στη διανομή και είμαστε ανοιχτοί σε νέες συνεργασίες**.
 
         Το επιχειρηματικό μας μοντέλο είναι η οικοδόμηση μακροχρόνιων, αμοιβαία επωφελών σχέσεων με αξιόπιστους προμηθευτές και συνεργάτες διανομής.
     - title: Επικοινωνία
       text: | 
-        Στείλτε μας ένα email στο **info@theeta.nl** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
+        Στείλτε μας email στο **info@theeta.nl** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
 
-        Οι υπάλληλοί μας έχουν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς, στις λειτουργικές διαδικασίες και σε ό,τι συνεπάγεται η λειτουργία επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
-
-        **Θα θέλαμε πολύ να μιλήσουμε**.
+        Οι συνεργάτες μας αριθμούν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς και στην επιτυχημένη λειτουργία επιχειρήσεων παραγωγής και διανομής.
   company-info: | 
     ## Στοιχεία εταιρείας
 
@@ -95,23 +98,25 @@ nl:
   blocks: 
     - title: Wat we doen
       text: | 
-        Theeta bestaat uit bijkantoren die werkzaam zijn in verschillende sectoren van import, export en productie.
-
-        Momenteel produceert Theeta elektrische en elektronische apparaten, distribueert het Italiaanse wijn en unieke high-tech chemische desinfectie-oplossingen, en voorziet het organisaties van de broodnodige persoonlijke beschermingsmiddelen. 
+        Theeta is actief in de sectoren productie, import en export.
+        
+        Het bedrijf vervaardigt zijn eigen assortiment elektrische apparaten, importeert en distribueert elektronische apparaten en voorziet de markt van Italiaanse wijn van hoge kwaliteit. 
+        
+        Daarnaast heeft het een succesvolle activiteit ontwikkeld op het gebied van de levering van persoonlijke beschermingsmiddelen aan grote organisaties. 
+        
+        Ten slotte biedt zij hoogtechnologische chemische ontsmettingsoplossingen aan, in samenwerking met SANOSIL AG, de grootste en meest innoverende onderneming ter wereld op dit gebied.
     - title: Met ons samenwerken
       text: | 
-        Wij nodigen u uit deze webpagina te verkennen om meer te weten te komen over de merken die wij produceren en de merken die wij distribueren. 
-
-        **Wij zijn gespecialiseerd in distributie en staan open voor nieuwe partnerschappen**.
+        Wij nodigen u uit om deze website te verkennen om meer te weten te komen over de merken die wij produceren en distribueren.
+        
+        **Wij zijn gespecialiseerd in distributie en staan open voor nieuwe partnerschappen.**
 
         Ons bedrijfsmodel is het opbouwen van langdurige, wederzijds voordelige relaties met vertrouwde leveranciers en distributiepartners.
     - title: Contact opnemen
       text: | 
         Email ons op **info@theeta.nl** voor meer informatie en samenwerkingsmogelijkheden.
 
-        Onze medewerkers hebben meer dan 15 jaar ervaring in marktonderzoek, operations en alles wat komt kijken bij het runnen van succesvolle productie- en distributiebedrijven.
-
-        **We willen graag praten.**
+        Onze partners hebben meer dan 15 jaar ervaring in marktonderzoek en het succesvol runnen van productie- en distributiebedrijven.
   company-info: | 
     ## Bedrijfsinformatie
 
