--- a/_data/index.yml
+++ b/_data/index.yml
@@ -1,46 +1,46 @@
 en: 
   h1: Our <em>Brands</em>
-  subheadline: Theeta consists of subsidiaries working in various sectors of import, export and production.
+  subheadline: Theeta is broadly active in the fields of import, export and production.
   block-2: 
-    title: <em>Ambition</em> lies at the core of what we&nbsp;do
+    title: <em>Lasting growth</em> and the meritocratic promotion of products are the core of our philosophy.
     text: |
-      **An introduction**
+      **Introduction**
 
-      While Theeta is a young company, it was created and is led by people who have more than 20 years of experience each running successful manufacturing and distribution firms.
+      Theeta is a new company, which ideally combines modernity and experience, as it was created and is managed by executives who have more than 20 years of experience and who have excelled in the management and development of successful production and distribution businesses.
 
-      Between overseeing the production of our own brand of appliances, Beckher, and helping existing brands, like Sanosil and Miravento, expand with the help of our network, we seize opportunities in multiple sectors and always aim high.
+      Both the production to the highest standards of our own brand of electrical appliances, BECKHER, and the distribution through strong networks of existing brands, SANOSIL and MIRAVENTO, we create new growth opportunities and raise the bar for even higher quality and profitable operations. For Theeta, which operates around the globe, <em>“the world is not enough.”</em>
   clients: 
     title: Some of our <em>Clients</em>
   brands: 
     title: Our Brands
   grid-links:
     - label: About us
-      title: Learn about Theeta
-      text: Theeta's work spans multiple sectors of import, distribution and production.
+      title: Learn more about Theeta
+      text: Theeta's work spans many areas of production, import and distribution.
       url: about
     - label: News
       title: Visit the newsroom
       text: Find important company announcements, press releases, and breaking industry news here.
       url: news
-    - label: Contact
+    - label: Contact us
       title: Collaborate with&nbsp;us
-      text: We pride ourselves in being reliable, long-term suppliers and customers.
+      text: We are reliable on principle and maintain honest, long-term and mutually beneficial commercial relationships with customers and suppliers. Their trust honors us!
       url: contact
     - label: Careers
       title: Work at Theeta
-      text: Become part of a fast-moving team and take agency over your work in customer relations, operations, or e-commerce.
+      text: Join Theeta’s flexible and fast-growing team and start an ambitious career in partnerships and e-commerce.
       url: careers
 el: 
   h1: Οι <em>Μάρκες</em> μας
-  subheadline: Η Theeta αποτελείται από παραρτήματα που δραστηριοποιούνται σε διάφορους τομείς εισαγωγών, εξαγωγών και παραγωγής.
+  subheadline: H εταιρία Theeta δραστηριοποιείται ευρύτατα στους τομείς εισαγωγών, εξαγωγών και παραγωγής.
   block-2: 
-    title: Η <em>φιλοδοξία</em> βρίσκεται στον πυρήνα αυτού που κάνουμε.
+    title: Η <em>διαρκής ανάπτυξη</em> και η αξιοκρατική ανάδειξη των προϊόντων  αποτελούν τον πυρήνα της φιλοσοφίας μας.
     text: |
       **Εισαγωγή**
 
-      Αν και η Theeta είναι μια νέα εταιρεία, δημιουργήθηκε και διοικείται από ανθρώπους που έχουν περισσότερα από 20 χρόνια εμπειρίας ο καθένας στη διοίκηση επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
+      Η Theeta είναι μια νέα εταιρία, που συνδυάζει ιδανικά την νεωτερικότητα και την εμπειρία, καθώς δημιουργήθηκε και διοικείται από στελέχη που έχουν στο ενεργητικό τους περισσότερα από 20 χρόνια εμπειρίας και που έχουν διαπρέψει στην διοίκηση και ανάπτυξη επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
 
-      Μεταξύ της επίβλεψης της παραγωγής της δικής μας μάρκας συσκευών, Beckher, και της διανομής στο δικτύου μας υφιστάμενων εμπορικών σημάτων, όπως Sanosil και Miravento, εκμεταλλευόμαστε ευκαιρίες σε πολλούς τομείς και στοχεύουμε πάντα ψηλά.
+      Τόσο η παραγωγή με τα πιο υψηλά standards της δικής μας μάρκας ηλεκτρικών συσκευών BECKHER όσο και η διανομή μέσω ισχυρών δικτύων των υφιστάμενων εμπορικών brands, SANOSIL και MIRAVENTO,  δημιουργούν νέες ευκαιρίες ανάπτυξης και ανεβάζουν τον πήχη ψηλά για ακόμη πιο ποιοτικές και επικερδείς δραστηριότητες. Για την THEETA που δραστηριοποιείται ανά την υφήλιο, <em>«ο κόσμος δεν είναι αρκετός»</em>.
   clients: 
     title: Μερικοί από τους <em>Πελάτες</em> μας
   brands: 
@@ -48,7 +48,7 @@ el:
   grid-links:
     - label: Σχετικά με εμάς
       title: Μάθετε για τη Theeta
-      text: Το έργο της Theeta εκτείνεται σε πολλούς τομείς της εισαγωγής, της διανομής και της παραγωγής.
+      text: Το έργο της Theeta εκτείνεται σε πολλούς τομείς της παραγωγής, της εισαγωγής και της διανομής.
       url: about
     - label: Νέα
       title: Επισκεφθείτε το newsroom
@@ -56,41 +56,41 @@ el:
       url: news
     - label: Επικοινωνία
       title: Συνεργαστείτε μαζί&nbsp;μας
-      text: Είναι περηφάνια μας να είμαστε αξιόπιστοι, μακροχρόνιοι προμηθευτές και πελάτες.
+      text: Αρχή μας είναι η αξιοπιστία και η διατήρηση έντιμων, μακρόχρονων και αμοιβαία επωφελών εμπορικών σχέσεων με πελάτες και προμηθευτές. Η εμπιστοσύνη τους, μας τιμά!
       url: contact
     - label: Καριέρα
       title: Εργαστείτε στη Theeta
-      text: Γίνετε μέλος μιας ταχέως κινούμενης ομάδας και εργαστείτε στις σχέσεις με πελάτες, τις επιχειρησιακές λειτουργίες ή το ηλεκτρονικό εμπόριο.
+      text: Γίνετε μέλος της ευέλικτης και ταχέως αναπτυσσόμενης ομάδας της Theeta  και ξεκινήστε μια φιλόδοξη καριέρα στις εταιρικές σχέσεις και το ηλεκτρονικό εμπόριο.
       url: careers
 nl: 
   h1: Onze <em>Merken</em>
-  subheadline: Theeta bestaat uit bijkantoren die werkzaam zijn in verschillende sectoren van invoer, uitvoer en produktie.
+  subheadline: Theeta is in grote lijnen actief op het gebied van import, export en produktie.
   block-2: 
-    title: <em>Ambitie</em> ligt aan de basis van wat we doen
+    title: <em>Langdurige groei</em> en de meritocratische promotie van producten vormen de kern van onze filosofie.
     text: |
-      **Een introductie**
+      **Introductie**
 
-      Theeta is een jong bedrijf, maar is opgericht en wordt geleid door mensen die elk meer dan 20 jaar ervaring hebben in het leiden van succesvolle productie- en distributiebedrijven.
+      Theeta is een nieuwe onderneming, die op ideale wijze moderniteit en ervaring combineert, aangezien zij is opgericht en wordt geleid door kaderleden die meer dan 20 jaar ervaring hebben en die hebben uitgeblonken in het beheer en de ontwikkeling van succesvolle produktie- en distributiebedrijven.
 
-      Tussen het toezicht houden op de productie van ons eigen merk Beckher en het helpen uitbreiden van bestaande merken zoals Sanosil en Miravento met behulp van ons netwerk, grijpen we kansen in meerdere sectoren en mikken we altijd hoog.
+      Zowel met de productie volgens de hoogste normen van ons eigen merk elektrische apparaten, BECKHER, als met de distributie via sterke netwerken van bestaande merken, SANOSIL en MIRAVENTO, creëren wij nieuwe groeimogelijkheden en leggen wij de lat hoog voor een nog hogere kwaliteit en een rendabele bedrijfsvoering. Voor Theeta, die rond de aarde opereert, is <em>“de wereld niet genoeg.”</em>
   clients: 
-    title: Enkele van onze <em>Klanten</em>
+    title: Enkele van onze <em>Cliënten</em>
   brands: 
     title: Onze merken
   grid-links:
     - label: Over ons
-      title: Leer meer over Theeta
-      text: Theeta's werk strekt zich uit over meerdere sectoren van import, distributie en productie.
+      title: Meer over Theeta
+      text: Theeta's werk bestrijkt vele gebieden van productie, import en distributie.
       url: about
     - label: Nieuws
       title: Bezoek de newsroom
       text: Hier vindt u belangrijke bedrijfsaankondigingen, persberichten en het laatste nieuws uit de sector.
       url: news
-    - label: Contact
+    - label: Contact us
       title: Samenwerken met&nbsp;ons
-      text: Wij zijn er trots op dat wij betrouwbare leveranciers en klanten voor de lange termijn zijn.
+      text: Wij zijn principieel betrouwbaar en onderhouden eerlijke, langdurige en wederzijds voordelige handelsrelaties met klanten en leveranciers. Hun vertrouwen doet ons eer aan!
       url: contact
     - label: Carrières
       title: Werken bij Theeta
-      text: Maak deel uit van een snelgroeiend team en neem het agentschap over je werk in klantenrelaties, operations of e-commerce.
+      text: Sluit je aan bij het flexibele en snelgroeiende team van Theeta en begin aan een ambitieuze carrière in partnerships en e-commerce.
       url: careers
