--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,7 @@
 
 title: Theeta BV
 description: >- # this means to ignore newlines until "baseurl:"
-  Import, export and production. Netherlands, EU.
-  Producer of Beckher appliacnes. Distributor of Sanosil disinfectants in Greece and Cyprus and Vallebelbo Miravento wine in Greece.
+  Production, import and export company in the Netherlands, EU. Producer of Beckher appliances. Distributor of Miravento wine. Exclusive distributor of Sanosil disinfectants in Greece and Cyprus.
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
