--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,11 +1,9 @@
 en: 
   title: Contact
   text: | 
-    Email us at **[info@theeta.nl](mailto:info@theeta.nl)** for more information and collaboration opportunities.
+    Email us at **info@theeta.nl** for more information and collaboration opportunities.
 
-    Our employees have more than 15 years of experience in market research, operations and everything that comes with running successful manufacturing and distribution businesses.
-
-    **We'd love to talk.**
+    Our partners have more than 15 years of experience in market research and successful operation of manufacturing and distribution businesses.
 
 
     ## Company Information
@@ -38,11 +36,9 @@ en:
 el: 
   title: Επικοινωνία
   text: | 
-    Στείλτε μας ένα email στο **[info@theeta.nl](mailto:info@theeta.nl)** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
+    Στείλτε μας email στο **info@theeta.nl** για περισσότερες πληροφορίες και ευκαιρίες συνεργασίας.
 
-    Οι υπάλληλοί μας έχουν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς, στις λειτουργικές διαδικασίες και σε ό,τι συνεπάγεται η λειτουργία επιτυχημένων επιχειρήσεων παραγωγής και διανομής.
-
-    **Θα θέλαμε πολύ να μιλήσουμε**.
+    Οι συνεργάτες μας αριθμούν περισσότερα από 15 χρόνια εμπειρίας στην έρευνα αγοράς και στην επιτυχημένη λειτουργία επιχειρήσεων παραγωγής και διανομής.
 
 
     ## Στοιχεία εταιρείας
@@ -76,11 +72,9 @@ el:
 nl: 
   title: Neem contact op met
   text: | 
-    Email ons op **[info@theeta.nl](mailto:info@theeta.nl)** voor meer informatie en samenwerkingsmogelijkheden.
+    Email ons op **info@theeta.nl** voor meer informatie en samenwerkingsmogelijkheden.
 
-    Onze medewerkers hebben meer dan 15 jaar ervaring in marktonderzoek, operations en alles wat komt kijken bij het runnen van succesvolle productie- en distributiebedrijven.
-
-    **We willen graag praten.**
+    Onze partners hebben meer dan 15 jaar ervaring in marktonderzoek en het succesvol runnen van productie- en distributiebedrijven.
 
 
     ## Bedrijfsinformatie
