new miravento pdf

--- a/_data/brands.yml
+++ b/_data/brands.yml
@@ -279,7 +279,7 @@ el:
 
       To Prosecco DOC μπαίνει στη σειρά Miravento κατά παραγγελία της Theeta και έρχεται να ολοκληρώσει τη σειρά προσφέροντας μία ξηρή επιλογή.
     docs: 
-      - file: /uploads/Theeta - Miravento Sparkling Wines FEB 2022 EL - website.pdf
+      - file: /uploads/Theeta - Miravento Sparkling Wines 2022 EL - website.pdf
         title: Παρουσίαση Κρασιών Miravento 2022
         type: PDF
         description: Moscato d’Asti DOCG, Moscato Rosé, Prosecco DOC
